cardlist.css
.imgContainer{
    width:80%;
    height: 330px;
    border-radius: 5px;
    border:3px solid rgb(252, 249, 249);
    margin: 0 auto;
    margin-bottom: 30px;
}

.cardContainer{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    
    margin:0 140px 0 148px;
    
    
    width: 80%;
    height:300px;
}

#card1,#card2,#card3{
    border:2px solid #e6e0e0;
    width:33%;
    margin-right: 8px;
    padding:0 18px 0 18px;
    background-color:#F7F7F7 ;
}

#card1,#card2{
   text-align: justify;
}
.cardtitle{
   
    font-weight: bold;
    font-size:15px;
    margin-top:10px;
    margin-bottom:10px;
}
.cardp{
    padding-top: 15px 0 10px 0;
    

}

.cardheader{
    font-size: 15px;
    padding-top: 10px;
    padding-bottom: 6px;
    border-bottom: 3px solid #ADACAD;
    width: 100%;
    margin: 0 auto;
    margin-bottom: 15px;
}

.footercontainer{
    border-top:1px solid rgb(233, 227, 227);
    
    width:80%;
    height: 100px;
    margin:0 auto;
    margin-top:10px;

}

.footerp{
    font-size: 15px;
    padding-top:10px;
    color:#948e8e;
    margin-top: 10px;
}

.address{
    padding-top:8px;
    line-height: 25px;
}

.address a{
    text-decoration: none;
}

